# freepooma-testsuite

./: CMakeLists.txt  Makefile.base  config.cmake  testsuite.cfg
BASELINES/: sizes.log.m32
KNOWN_BUGS/: DEFAULT
TESTS/: BasicTest1.C  BasicTest2.C  BasicTest3.C  Centerings.C  CollectFromContextsTest.C  CrossBox.C  DiskLayoutPrinter.C  DiskLayoutTest1.C  DiskMetaTest1.C  EngineTests.h  ExpressionTest.C  FieldOffset.C  FieldReductions.C  FieldTour2.C  FieldTour3.C  FileSetPrinter.C  FileSetReaderTest0.C  FileSetReaderTest0.required_flags  FileSetReaderTest1.C  FileSetReaderTest2.C  FileSetReaderTest2.prolog  FileSetWriterTest1.C  FileSetWriterTest2.C  Gradient.C  GridBroadcastTest.C  GridMessageTest.C  IteratorPairDomainTest1.C  IteratorPairDomainTest2.C  LOCAL.ldflags  LOCAL.required_flags  LocalPatch.C  MeshTest1.C  MetaTokenIteratorTest1.C  NearestNeighbors.C  OffsetReduction.C  PatchSizeSyncerTest.C  Positions.C  ReduceOverContextsTest.C  ReductionTest1.C  ReductionTest2.C  (+162 more)
TESTS/IOdata/: TestData.data  TestData.layout  TestData.offset
TESTS/deactivated/: pooma.C
TESTS/link_only/: LOCAL.ldflags  LOCAL.required_flags
g++_fails/: FieldTour1.C  TestDataBrowser.C  array_test29.C  bctest2.C  dynamic_array_test5.C  particle_bench1.C  particle_bench2.C  particle_bench3.C  particle_bench4.C
lib/: PoomaConfiguration.h
lib/Array/: Array.h  ArrayOperatorSpecializations.h  ArrayOperators.h  CreateLeaf.h  PoomaArrayOperators.h  PrintArray.h  README  VectorArrayOperators.h
lib/Connect/: ConnectPair.h  Connection.cmpl.C  Connection.h  Connector.h
lib/Domain/: Grid.h  (+44 more)
(+367 files in other folders)
